--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@mantine/dates": "^6.0.10",
     "@mantine/form": "^6.0.10",
     "@mantine/hooks": "^6.0.10",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.0"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
